// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sxdyqdb {
  border-radius: var(--sx-radii-round);
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxdyqdb4bknw--c2 {
  border: 1px solid var(--sx-colors-tonal400);
  background: white;
  color: var(--sx-colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxdyqdb sxdyqdb03kze--appearance-outline sxdyqdb03kze--theme-primary sxdyqdb4bknw--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sxdyqdb {
  border-radius: var(--sx-radii-round);
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxdyqdb4bknw--c2 {
  border: 1px solid var(--sx-colors-tonal400);
  background: white;
  color: var(--sx-colors-primary500);
}

.sxdyqdb4qfa7--c2 {
  border: 1px solid var(--sx-colors-tonal400);
  background: white;
  color: var(--sx-colors-secondary500);
}

.sxdyqdbmrg77--c2 {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxdyqdb sxdyqdb03kze--appearance-solid sxdyqdb03kze--theme-primary sxdyqdbmrg77--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
